# zw-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  cliff.toml
.github/: dependabot.yml
.github/workflows/: check.yml  ci.yml  release.yml
docs/: config.example.toml
src/: main.rs  windows_service.rs
src/handlers/: callback.rs  commands.rs  inline_query.rs  mod.rs
src/i18n/: en.rs  mod.rs  zh_cn.rs
src/services/: mod.rs  rank.rs  zw.rs
src/utils/: config.rs  db.rs  fun.rs  logger.rs  mod.rs
