[package]
name = "zw-rs"
version = "1.1.0"
authors = ["VeryBaaad <verybaaad@outlook.com>"]
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
log = "0.4.29"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono"] }
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.52.2", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
chrono = "0.4.44"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
debug = false
strip = true
incremental = false

[profile.dev]
opt-level = 0
lto = false
codegen-units = 1
panic = 'unwind'
debug = true
strip = false
