[package]
name = "zw-rs"
version = "2.1.1"
authors = ["VeryBaaad <verybaaad@outlook.com>"]
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.10"
log = "0.4.32"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["all-databases", "tls-native-tls", "runtime-tokio", "macros", "chrono"] }
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.52.2", features = ["rt-multi-thread", "macros"] }
toml = "1.1.2"

[target.'cfg(windows)'.dependencies]
windows-service = "0.8.1"

[build-dependencies]
chrono = "0.4.44"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
debug = false
strip = true
incremental = false

[profile.dev]
opt-level = 0
lto = false
codegen-units = 1
panic = 'unwind'
debug = true
strip = false
